--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>bubble bloom</title>
-    <meta name="description" content="Lovable Generated Project" />
+    <title>DragPopper</title>
+    <meta name="description" content="dragpopper" />
     <meta name="author" content="Lovable" />
 
     <meta property="og:title" content="bubble bloom" />
