--- a/index.html
+++ b/index.html
@@ -3,9 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Drag Blast</title>
-    <meta name="description" content="drag blast" />
+    <title>BUBBLE POP</title>
+    <meta name="description" content="bubble pop" />
     <meta name="author" content="Lovable" />
+<meta name="title" content="BUBBLE POP">
+<meta name="description" content="Bubble Shooter is a classic and addictive puzzle game where your goal is simple: match and pop bubbles! Aim, shoot, and create groups of 3 or more bubbles of the same color to clear the board. With easy-to-learn controls, colorful graphics, and endless levels of fun, this bubble shooting game is perfect for players of all ages.Challenge your accuracy, improve your strategy, and enjoy relaxing gameplay anytime, anywhere. Whether you’re playing for a quick break or aiming for a high score, Bubble Shooter delivers hours of exciting bubble-popping action.✨ Features:Free to play bubble puzzle gameBright and vibrant bubble graphicsEndless levels & increasing difficultySimple controls, perfect for casual gamingStart playing Bubble Shooter now and test your skills in this timeless bubble-popping adventure!">
+<meta name="keywords" content="Bubble Shooter, Play Bubble Shooter online, Free Bubble Shooter game, Bubble Shooter classic, Online bubble shooting gameBubble pop game, Match 3 bubble shooter, Shooting bubbles puzzle, Best bubble shooter game, Bubble shooter free playPop bubbles, Aim and shoot, Color matching puzzle, Arcade bubble game, Brain training puzzlePlay bubble shooter game free online, Addictive bubble shooting puzzle game, Bubble shooter for kids and adults, Classic bubble shooter with levels, Free bubble popping fun game">
+<meta name="robots" content="index, follow">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<meta name="language" content="English">
+<meta name="revisit-after" content="1 days">
 
     <meta property="og:title" content="drag blast" />
     <meta property="og:description" content="Lovable Generated Project" />
